# gino-fastapi-demo

./: README.md  pyproject.toml
src/gino_fastapi_demo/: config.py  main.py
src/gino_fastapi_demo/models/: __init__.py  users.py
src/gino_fastapi_demo/views/: users.py
